# BA_Dataset_Generator

./: CMakeLists.txt  README.md
include/: dataPath.h  mycommon.h  myconvert.h  myio.h  triangulation.h
src/: colmap2pba.cpp  mycommon.cpp  myconvert.cpp  myio.cpp  triangulation.cpp
